Project for My Girlfriend

--- a/index.html
+++ b/index.html
@@ -5,11 +5,10 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-  <title>Happy Birthday!!! :)</title>
-  <!-- Google Font -->
+  <title>JuneNghia ♥ LangNhi</title>
   <link href="https://fonts.googleapis.com/css?family=Work+Sans:300,400" rel="stylesheet" />
   <link rel="shortcut icon" type="image/png" href="img/favicon.png" />
-  <link rel="stylesheet" href="styles/main.css" />
+  <link rel="stylesheet" href="styles/main.css"/>
 </head>
 
 <body>
@@ -23,41 +22,43 @@
   <div class="container">
     <div class="one">
       <h1 class="one">
-        Hi
+        Hellu
         <span id="name"></span>
       </h1>
-      <p class="two" id="greetingText">I really like your name btw!</p>
+      <p class="two" id="greetingText"></p>
     </div>
 
     <div class="three">
-      <p>It's your birthday!! :D</p>
+      <p>Hôm nay là sinh nhật của công chúa àaaa :D</p>
+      <p>Vậy thì để anh chúc sinh nhật cho pé đỡ tủi nhá, vì anh biết chả ai thèm chúc pé đâu :)))</p>
+      <p>Trêu pé đó 😝, dô lời chúc nè của tôi nèeee</p>
     </div>
 
     <div class="four">
       <div class="text-box">
         <p class="hbd-chatbox">
-          Happy birthday to youu!! Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur quisquam amet ipsam vitae, voluptatum architecto aliquid id quo error tempora quos aperiam magni necessitatibus quas ut, possimus nesciunt nam ad.
+          Chúc zk anh sinh nhật năm nay thật vui vẻ, hạnh phúc bên anh và gia đình nhá, chúc cho zk anh ngày càng xinh đẹp, học giỏi hơn, kiếm được nhiều tiền hơn để nuôi anh nè, và chúc pé đạt được nhiều mục tiêu đặt ra trong năm nay nhá.
+          Đặc biệt là chúc pé và anhhhhh sẽ là của nhaooo tới cuối cuộc đời này lunnn 😝 
         </p>
-        <p class="fake-btn">Send</p>
+        <p class="fake-btn">Loading...</p>
       </div>
     </div>
 
     <div class="five">
-      <p class="idea-1">That's what I was going to do.</p>
-      <p class="idea-2">But then I stopped.</p>
+      <p class="idea-1">Thêm một điều đặc biệt nữa</p>
+      <p class="idea-2">Pé có biết là điều gì không ?</p>
       <p class="idea-3">
-        I realised, I wanted to do something<br>
-        <strong>special</strong>
-        .
+        Ngoài ngày sinh nhật của pé iuu ra, hôm nay cũng là ngày<br>
+        <strong>Kỉ niệm 1 năm yêu nhaoo của 2 đứa mình ó</strong>
       </p>
-      <p class="idea-4">Because,</p>
+      <p class="idea-4">Mới đây mà nhanh ghê</p>
       <p class="idea-5">
-        You are Special
+        Tưởng là không bao giờ tụi mình gặp nhau cơ, đồ tồi
         <span>:)</span>
       </p>
       <p class="idea-6">
-        <span>S</span>
-        <span>O</span>
+        <span>LAN</span>
+        <span>NHI</span>
       </p>
     </div>
 
@@ -65,8 +66,8 @@
       <img src="./img/irene.jpg" alt="profile" class="profile-picture" id="imagePath"/>
       <img src="img/hat.svg" alt="hat" class="hat" />
       <div class="wish">
-        <h3 class="wish-hbd">Happy Birthday!</h3>
-        <h5 id="wishText">May the js.prototypes always be with you! ;)</h5>
+        <h3 class="wish-hbd">HAPPY BIRTHDAY!</h3>
+        <h5 id="wishText">Anhhh yêu emmm nhìu lắm óoooooo</h5>
       </div>
     </div>
 
@@ -139,8 +140,8 @@
     </div>
 
     <div class="nine">
-      <p>Okay, now come back and tell me if you liked it.</p>
-      <p id="replay">Or click, if you want to watch it again.</p>
+      <p>Giờ thì đi kiếm tui rùi Hunnn tui ikkkk</p>
+      <p id="replay">Còn thích quá muốn coi lại nhìn nhấn vô đây nhá</p>
       <p class="last-smile">:)</p>
     </div>
   </div>
